--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,24 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+h1 {
+  /* font-size: 7rem;
+  text-transform: uppercase;
+  font-family: 'Bebas Neue'; */
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+  /* line-height: 5.9rem; */
+}
+h2 {
+  /* font-size: 7rem;
+  text-transform: uppercase;
+  font-family: 'Bebas Neue'; */
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+  /* line-height: 5.9rem; */
+}
+
+.char {
+  transform: translateY(115px);
+  transition: transform .5s;
+  
+}
